# KronosCollider

./: .gitmodules  README.md  kronoscollider.py
KronosTemplate/: CMakeLists.txt  KronosTemplate.cpp  KronosTemplate.sc
cpp/: CMakeLists.txt  KronosTemplate.cpp
examples/: KronosBuffer.k  KronosPlayBuf.k
